analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/valKeywordOnVarargFunctionValueParameter.kt
// IGNORE_FE10
// KT-72730

fun foo(vararg val para<caret>meter) {}
